SERVER-55533: Add kError state to resharding metrics invariants for recipients